--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,12 @@ android {
 
     defaultConfig {
         applicationId "com.hamza.weatherapp"
-        minSdk 21
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        buildConfigField("String", "BASE_URL", BASE_URL)
+        buildConfigField("String", "IMAGE_URL", IMAGE_URL)
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -65,10 +67,11 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.compose.material3:material3:1.0.1'
+    implementation 'androidx.compose.material3:material3-window-size-class:1.0.1'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -76,6 +79,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.0'
+    testImplementation "com.google.truth:truth:1.1"
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
 
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
@@ -85,6 +91,10 @@ dependencies {
 
     // Compose Nav Destinations
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+
+    // Compose Nav Destinations
+    implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.40.5"
@@ -105,4 +115,7 @@ dependencies {
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.3"
+
+    // coil
+    implementation "io.coil-kt:coil-compose:2.2.2"
 }
