--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Base server URL
+BASE_URL="https://cdn.faire.com/static/mobile-take-home/"
+IMAGE_URL="https://cdn.faire.com/static/mobile-take-home/icons/{weather_state_abbr}.png"
